syntax = "proto3";
package protobuf.http;
message PCError{
	int32 hOpCode=1;
	PCErrorCode errorCode=2;
	int32 errorHOpCode=3;
	string extraMsg=4;
}
enum PCErrorCode{
	ERROR_CODE_0=0;//未知错误
	ERROR_CODE_1=1;//该支付订单不存在
	ERROR_CODE_2=2;//你没有权限操作此订单
	ERROR_CODE_3=3;//该订单不合法，不存在商品
	ERROR_CODE_4=4;//你的身份不合法或者已过期
}